<resources>
    <string name="app_name">MediCal</string>
    <string name="text">Strive for your better health.</string>
    <string name="logo">MediCal</string>
    <string name="ambulance_icon">Ambulance Icon</string>
    <string name="add_event_btn">Add Event</string>
    <string name="terms_conditions">Terms \&amp; Conditions</string>
    <string name="submit">Submit</string>
    <string name="home_btn">Back to Home Page</string>
    <string name="reset_pass">Reset Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="password">Password</string>
    <string name="events_list">List of Events</string>
    <string name="email">E-Mail</string>
    <string name="login">Login</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">Forgotten password?</string>
    <string name="username">Username</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="Register">Register your account</string>
    <string name="confirm_account">Enter your E-mail to reset password</string>
    <string name="edit_event">Edit Event</string>
    <string name="signIn">Sign in</string>
    <string name="calendar">Calendar</string>
    <string name="share_cal">Share Calendar</string>
    <string name="accessibility">Accessibility</string>
    <string name="confirm_email">Confirm e-mail</string>
    <string name="back_to_calendar">Back to Calendar</string>
    <string name="back_to_login">Back to Login</string>
    <string name="connect_account">Connect to your account</string>
    <string name="enter_new_pass">Enter your new password</string>
    <string name="create_event">Create a new Event</string>
    <string name="title">Title of the Event*</string>
    <string name="date">Date*</string>
    <string name="time">Time*</string>
    <string name="notes">Notes</string>
    <string name="mandatoryFields">Fields marked with * are mandatory</string>
    <string name="inputTitle">Input a title here</string>
    <string name="inputDate">Input a date here</string>
    <string name="inputTime">Input a time here</string>
    <string name="inputNotes">Input any notes here</string>
    <string name="snooze">Snooze</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="Accessibility">Accessibility</string>
    <string name="Selected">Selected</string>
    <string name="Change">Change</string>
    <string name="ExamplePara">This is a sample text paragraph. Text at this size should be easy to read. To adjust text please click on one of the above buttons.Text size can be changed back at anytime by returning to the accessibility page.</string>
    <string name="ReturnButton">Return</string>
    <string name="regular">Regular</string>
    <string name="Large">Large</string>
    <string name="Extra">Extra Large</string>
    <string name="ChangeFontSize">Change Font Size</string>
</resources>
